# preck

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
src/: main.rs
