[package]
name = "pid-checker"
version = "2.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "pidchecker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "signal"] }
once_cell = "1.17.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
