[package]
name = "pid-checker"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "pidchecker"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["http2"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "signal"] }
once_cell = "1.17.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
