[package]
name = "preck"
version = "3.1.0"
edition = "2021"

[[bin]]
name = "preck"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "signal"] }
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
